--- a/style.css
+++ b/style.css
@@ -1,55 +1,61 @@
-.table{
+.form{
     display: flex;
     flex-direction: column;
     margin: auto;
     width: 70%;
 }
-.table__admin{
+.form--title-wrap{
     display: flex;
     justify-content: space-between;
     border-bottom: 1px solid #D4D4D4;
+    padding-bottom: 20px;
+    display: flex;
+    align-items: end;
 }
-.admin__item{
-    padding: 5px 10px;
-    border: 1px solid #D4D4D4;
-    border-radius: 4px;
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    -ms-border-radius: 4px;
-    -o-border-radius: 4px;
-    width: calc(30%-10px);
-    margin-bottom: 20px;
+.form--input-wrapper{
     font-size: 14px;
+    width: calc(25% - 10px);
+    margin-top: 10px;
 }
-.admin__btn{
+.form--input-item{
+    display: flex;
+    flex-direction: column;
+    color: #666666;
+}
+label{
+    font-size: 16px;
+    margin-bottom: 10px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+.inputs-user{
+    padding: 5px 10px;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+    border: 1px solid #ccc;
+    color: #666666;
+}
+.form--btn{
+    padding: 7px 10px;
     font-size: 16px;
     cursor: pointer;
+    border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+    min-width: 100px;
 }
-.table{
-    border: 1px solid #D4D4D4;
-    border-radius: 4px;
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    -ms-border-radius: 4px;
-    -o-border-radius: 4px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 10px;
-}
-.table__list{
-    display: flex;
-    flex-direction: column;
-    overflow: auto;
-    height: 300px;
-    padding: 0;
-}
-.table__item{
+.item-list{
+    color: #666666;
+    list-style-type: none;
     display: flex;
     flex-direction: row;
-    margin-bottom: 20px;
+    justify-content: space-between;
+    align-items: center;
+    width: 70%;
+    margin: 10px;
 }
-.table__item div{
-    font-size: 14px;
-    width: calc(30% - 10px);
-}
+
