--- a/style.css
+++ b/style.css
@@ -1,55 +1,127 @@
-.table{
-    display: flex;
-    flex-direction: column;
+.wrapper{
+    width: 30%;
+    min-width: 300px;
     margin: auto;
-    width: 70%;
-}
-.table__admin{
-    display: flex;
-    justify-content: space-between;
-    border-bottom: 1px solid #D4D4D4;
-}
-.admin__item{
-    padding: 5px 10px;
-    border: 1px solid #D4D4D4;
-    border-radius: 4px;
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    -ms-border-radius: 4px;
-    -o-border-radius: 4px;
-    width: calc(30%-10px);
-    margin-bottom: 20px;
-    font-size: 14px;
-}
-.admin__btn{
-    font-size: 16px;
-    cursor: pointer;
-}
-.table{
-    border: 1px solid #D4D4D4;
-    border-radius: 4px;
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    -ms-border-radius: 4px;
-    -o-border-radius: 4px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    padding: 10px;
+    align-items: baseline;
+    border: 1px solid #E8EAE9;
+    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    padding: 20px 30px;
+    min-height: 400px;
 }
-.table__list{
-    display: flex;
-    flex-direction: column;
-    overflow: auto;
-    height: 300px;
-    padding: 0;
-}
-.table__item{
+.header-item{
     display: flex;
     flex-direction: row;
-    margin-bottom: 20px;
+    justify-content: space-between;
+    margin: 20px 0 40px;
+    width: 100%;
+    padding-bottom: 20px;
+    border-bottom: 1px solid #ccc;
 }
-.table__item div{
+.inpur-wrap{
+}
+input{
+    width: 180px;
+    color: #666666;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    padding: 5px 10px;
+    border: 1px solid #D4D4D4;
+    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    -ms-border-radius: 4px;
+    -o-border-radius: 4px;
+}
+input:focus-visible{
+    outline: none;
+}
+input::placeholder{
+    color: #4BACA2;
+    font-weight: 400;
+    font-size: 18px;
+    opacity: 0.6;
+}
+.btn{
+    min-width: 100px;
+    padding: 7px 15px;
+    background: #70CBC4;
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.3);
+    color: #FFFFFF;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    border: none;
+    cursor: pointer;
+    border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+}
+.body-item{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 10px;
+    width: 100%;
+}
+.item-task{
+    position: relative;
+    font-weight: 400;
     font-size: 14px;
-    width: calc(30% - 10px);
+    line-height: 24px;
+    color: #666666;
+    background: yellow;
+    min-width: 100px;
+    max-width: 250px;
+    padding: 20px;
+    margin: 10px;
+    border: 1px solid #ccc;
+    border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+    cursor: pointer;
+}
+.item-task-done{
+    background: #488C85;
+}
+.close-btn{
+    width: 10px;
+    height: 10px;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+    border: none;
+    background: none;
+}
+.close-btn::after,.close-btn::before{
+    content: '';
+    position: absolute;
+    width: 1px;
+    height: 10px;
+    background: #666666;
+    top: 0;
+}
+.close-btn::after{
+    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+}
+.close-btn::before{
+    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
 }
